# flipperzero-firmware

applications/: applications.c  applications.mk
applications/game-2048/: font.c  font.h  game-2048.c
applications/nokia-snake/: CMakeLists.txt  nokia-snake.c
applications/snake-game/: snake-game.c
